Make requested changes

--- a/style.css
+++ b/style.css
@@ -5,13 +5,15 @@
   margin: 0;
   padding: 0;
   font-family: 'Lato', sans-serif;
+  
 }
-
+ 
 .navbar-toggler {
   width: 20px;
   height: 20px;
   position: relative;
   transition: 0.5s ease-in-out;
+  
 }
 
 .navbar-toggler span {
@@ -30,6 +32,7 @@
   background: #ec5242;
   transform: rotate(0deg);
   transition: 0.25s ease-in-out;
+  
 }
 
 .middle-bar {
@@ -166,6 +169,7 @@ i {
   color: #fff;
   font-weight: bold;
   text-align: center;
+  
 }
 
 .card-body:hover {
@@ -231,7 +235,14 @@ small {
 
 footer {
   height: 125px;
-  color: #fff;
+  color: rgb(12, 12, 12);
+}
+.bg-dark{
+ background-color: #fff!important;
+}
+
+.navbar-dark .navbar-brand{
+ color: #803b34; 
 }
 
 /* About section */
@@ -271,6 +282,16 @@ footer {
   .h-text h4 {
     font-size: 30px;
     color: #ec5242;
+  }
+ .card-body{
+  display: flex;
+  justify-content:space-evenly;
+  align-items: center;
+ }
+
+  .container-fluid{
+    flex-direction: row-reverse;
+    background: rgba(204, 204, 204, 0.5);
   }
 
   h1 {
